# Trustless_EV_Optimization

./: .env.example  .gitignore  BLOCKCHAIN_SETUP.md  INSTALLATION_GUIDE.md  Makefile  README.md  RESEARCH_SUMMARY.md  demo.py  deploy_contracts.sh  generate_experiment_charts.py  generate_explainability_charts.py  generate_research_analytics.py  health_check.py  install.py  local_charging_data.csv  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_demo.py  run_experiments.py  start_blockchain.sh  updated_vehicle_data.csv  visualization_index.py
contracts/: hardhat.config.js  package-lock.json  package.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: ModelValidator.sol
contracts/scripts/: deploy.js
examples/: complete_demo.py
experiments/: 01_data_analysis_experiment.py  02_baseline_models_experiment.py  03_federated_learning_experiment.py  04_blockchain_validation_experiment.py  05_optimization_experiment.py  06_security_evaluation_experiment.py  __init__.py  complete_research_demonstration.py
experiments/utils/: __init__.py  experiment_runner.py  report_generator.py  visualization_utils.py
notebooks/: 01_Complete_Research_Demonstration.ipynb  02_Individual_Component_Demos.ipynb
results/: demo_results_20250807_061439.json  demo_results_20250807_065803.json  demo_summary_20250807_061439.md  demo_summary_20250807_065803.md  research_visualization_summary.json  visualization_index.html
results/charts/: chart_generation_report.json  visualization_summary.md
results/ev_demo_20250807_062039/: demo_results.json  metrics_export.json  summary_report.md
results/ev_demo_20250807_062140/: demo_results.json  metrics_export.json  summary_report.md
results/ev_demo_20250807_065617/: demo_results.json  metrics_export.json  summary_report.md
results/explainability_charts/: explainability_report.json  explainability_summary.md
results/research_analytics/: research_analytics_report.json  research_summary.md
src/: __init__.py
src/blockchain/: __init__.py  validator.py
src/data_pipeline/: __init__.py  processor.py
src/evaluation/: security_testing.py
src/federated_learning/: __init__.py  client.py  server.py
src/metrics/: __init__.py  collector.py
src/ml_models/: __init__.py  (+3 more)
test_results/: full_test_report.md  unit_test_report.md
tests/: README.md  __init__.py  conftest.py  test_runner.py
(+24 files in other folders)
